--- a/index.css
+++ b/index.css
@@ -1,3 +1,39 @@
-#heading {
-    color: red;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid ;
+}
+.logo {
+    max-width: 100px;
+}
+.nav-items ul{
+    display: flex;
+    font-size: 24px;
+    list-style-type:none;
+}
+.nav-items ul li {
+    padding: 10px;
+    margin: 10px;
+}
+.res-card {
+    padding:10px;
+    margin:5px;
+    width: 200px;
+    height: 300px;
+    border: 1px solid black;
+}
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.res-card:hover{
+    border: 1px solid blue;
+    cursor: pointer;
+}
+.search {
+    padding: 10px;
+}
+.res-logo {
+   
+    width: 100%;
 }
